--- a/assets/css/Home.css
+++ b/assets/css/Home.css
@@ -1,1 +1,134 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+
+}
+
+html, body {
+  width: 100%;
+  padding:0;
+  margin:0;
+  overflow: visible;
+}
+
+#main{width:100%; overflow-x:hidden; transition: margin-left .5s;}
+#Icon{transition: margin-left .5s;}
+
+.NavigationBar{
+  list-style-type: none;
+  margin: 0;
+  padding: 0vh 10vw;
+  overflow: hidden;
+  font-size: 20px;
+  display: block;
+}
+.NavigationBar li{float:right;}
+.NavigationBar li#Icon{float:left;}
+.NavigationBar li a{
+  display: block;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  padding:3vh 1vw;
+}
+.NavigationBar li a i{padding-top:0.5vh;}
+.dropdown{
+  padding: 0;
+  list-style: none;
+  display: none;
+  float:left;
+  background: white;
+  z-index: 1;
+}
+.dropdown li{
+  position: relative;
+  display: block;
+  float:none;
+  left:0;
+}
+.dropdown li a{padding:1vh 2.5vw 1vh 1vw; float:left; text-align: left; width:100%;}
+.dropdown li div{width:100%; display:inline;}
+.dropdown li div a{width:80%;}
+.dropdown li div span{width:20% ;float:right; padding: 1vh 0vw;}
+
+#Categories:hover #categoriesDrop{display: block; position: absolute;} 
+#More:hover #moreDrop{display: block; position: absolute;}
+
+#Menu{float:left; display:none;}
+
+@media screen and (max-width:950px) {
+  #More, #ShopAll, #Categories, #New{display: none;}
+  #Menu {display: block;}
+  #Icon {position: absolute; left: 50%;transform: translate(-50%, 0%);}
+}
+
+@media screen and (max-width:600px) {
+  #Account{display: none;}
+}
+
+.SideNav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow: hidden;
+  transition: 0.5s;
+  padding:0;
+  padding-top: 60px;
+}
+
+.SideNav a {
+  padding: 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  display: inline-block;
+  transition: 0.3s;
+}
+.SideNav a:hover{text-decoration: none;}
+
+.Main{
+  padding: 5vh 3vw;
+  text-align: center;
+  font-size: 30px;
+}
+.Genre {
+  padding: 5vh 0;
+  display: flex; 
+  justify-content: space-around;
+}
+.GenreList{
+  font-size: 3vh;
+  width:15vh; 
+  height:15vh;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+.sideDropdown{
+  padding:0;
+  list-style: none;
+  display: none;
+  float:left;
+  color: white;
+  z-index: 2;
+}
+.sideDropdown li{
+  padding-left:30px;
+  position: relative;
+  display: block;
+  float:none;
+  left:0;
+}
+#SideCategories:hover #SideCategoriesDrop{display: block;}
