--- a/assets/css/NavBar.css
+++ b/assets/css/NavBar.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 *{
     margin: 0;
     padding: 0;
@@ -11,12 +9,13 @@
 
 html, body {
   width: 100%;
+  height: auto;
   padding:0;
   margin:0;
   overflow: visible;
 }
 
-#main{width:100%; overflow-x:hidden; transition: margin-left .5s; position: static;}
+#main{width:100%; overflow-x:hidden; transition: margin-left .5s; position: absolute;}
 #Icon{transition: margin-left .5s;}
 
 .NavigationBar{
@@ -26,6 +25,7 @@ html, body {
   overflow: hidden;
   font-size: 20px;
   display: block;
+  max-height: 69px;
 }
 .NavigationBar li{float:right;}
 .NavigationBar li#Icon{float:left;}
@@ -34,8 +34,17 @@ html, body {
   color: black;
   text-align: center;
   text-decoration: none;
-  padding:3vh 1vw;
+  padding:21.5px 1vw;
 }
+.NavigationBar li:hover{background-color: black;}
+.NavigationBar li:hover a{color: white;}
+.NavigationBar li:hover ul li a{color: black;}
+
+#Icon:hover{background-color: white;}
+#Icon:hover a{color: black;}
+
+.dropdown li:hover{background-color: grey;}
+
 .NavigationBar li a i{padding-top:0.5vh;}
 .dropdown{
   padding: 0;
@@ -51,13 +60,17 @@ html, body {
   float:none;
   left:0;
 }
-.dropdown li a{padding:1vh 2.5vw 1vh 1vw; float:left; text-align: left; width:100%;}
+.dropdown li a{padding:1vh 2.5vw 1vh 1vw; float:left; text-align: left; width:100%; color:black;}
 .dropdown li div{width:100%; display:inline;}
 .dropdown li div a{width:80%;}
 .dropdown li div span{width:20% ;float:right; padding: 1vh 0vw;}
 
-#Categories:hover #categoriesDrop{display: block; position: absolute;} 
-#More:hover #moreDrop{display: block; position: absolute;}
+.dropdown li a:hover{background-color: grey;}
+
+#categoriesDrop, #moreDrop{min-width: 12vw; position: absolute;}
+
+#Categories:hover #categoriesDrop{display: block; position: absolute; margin-top:-3px;} 
+#More:hover #moreDrop{display: block; position: absolute; margin-top:-3px;}
 
 #Menu{float:left; display:none;}
 
@@ -111,3 +124,4 @@ html, body {
   left:0;
 }
 #SideCategories:hover #SideCategoriesDrop{display: block;}
+#SideMore:hover #SideMoreDrop{display: block;}
