--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -24,22 +24,18 @@
 .list-product{
     margin: auto;
     width: 95vw;
-    height: 50vh;
-    /* background-color: red; */
+    height: 23em;
     overflow-y: scroll;
     scrollbar-width: thin;
 }
 
 .product-container{
-    /* position: relative; */
     display: inline-grid;
     grid-template-columns: 20vw 20vw 20vw 20vw;
     grid-gap: 5%;
-    /* background-color: #2196F3; */
     justify-items: center;
     align-items: center;
     padding: 3% 15% 5% 0%;
-    /* border: 1px solid gray; */
 
 }
 
@@ -52,8 +48,6 @@ div.product{
     min-width: 200px;
 }
 .product{
-    /* position: absolute; */
-    /* left: 0; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,7 +108,6 @@ div.product{
     position: relative;
     display: inline-grid;
     grid-template-columns: 50vw 50vw;
-    /* grid-gap: 1%;   */
     padding: 5% 10% 10% 10%;
 
 }
@@ -134,7 +127,6 @@ div.product{
 .cartBelow-right{
     display: flex;
     flex-direction: column;
-    /* justify-content: end; */
     align-items: center;
     padding-right: 10%;
 }
@@ -166,6 +158,33 @@ div.product{
     outline: none;
 }
 
-.cartTotal-container{
+@media only screen and (max-width: 550px) {
+        .product-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 5% 0;
+         
+    }
+}
+@media only screen and (max-width: 770px){
+
+    .cart-grid{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }    
+
+    #input-instruc{
+    width: 68vw;
+    height: 10vh;
+    }
+
+    .cartBelow-right{
+        padding: 5% 0;
+    }
 
 }
