--- a/assets/css/Home.css
+++ b/assets/css/Home.css
@@ -1,21 +1,86 @@
-.Main{
+* {
+  font-family: 'Mitr', sans-serif;
+}
+
+.Main {
   padding: 5vh 3vw;
   text-align: center;
   font-size: 30px;
 }
+
 .Genre {
   padding: 5vh 0;
-  display: flex; 
+  display: flex;
   justify-content: space-around;
 }
-.GenreList{
-  font-size: 3vh;
-  width:15vh; 
-  height:15vh;
+
+.GenreList {
+  font-size: 31px;
+  width: 15vw;
+  height: 15vw;
+  min-width: 144px;
+  min-height: 144px;
+  max-width: 200px;
+  max-height: 200px;
   display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
-  border: 2px solid black;
+  border: 1px solid black;
+  background-image: url("https://cdn.discordapp.com/attachments/882306005772427284/1033297468064018482/vinyl.jpg");
+  background-size: cover;
+  opacity: .7;
+  background-position: center;
   border-radius: 50%;
+  color: white;
+  -webkit-text-stroke: 2px #7e7e7e;
+  /* text-shadow: 3px 4px 2px #5963f291; */
+  transition: transform .5s;
 }
+
+.GenreList:hover {
+  transform: rotatez(360deg);
+  /* background-size: 18vw 18vw; */
+  /* color: ; */
+}
+
+.Recommend {
+  /* padding-bottom: ; */
+  font-size: 3vw;
+}
+
+/* @media screen and (min-width:1000px) {
+
+  .Genre {
+    max-width: 80%; */
+    /* padding: 5vw; */
+  /* }
+
+  .GenreList {
+    font-size: 2vw;
+    width: 10vw;
+    height: 10vw;
+  }
+
+} */
+
+.Recommend {
+  /* padding-bottom: ; */
+  font-size: 3vw;
+}
+
+img {
+  width: 300px;
+}
+
+@media screen and (max-width:768px) {
+
+  .detail {
+    margin-top: 20px;
+  }
+
+  .GenreList{
+    margin-bottom: 20px;
+  }
+}
+
