--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -16,10 +16,10 @@
     display: inline-block;
 }
 
-#pic-record{ 
+/* #pic-record{ 
     max-width: 70%;
     margin-left: 15%;
-}
+} */
 
 .info-product{  
     padding: 10% 15% 10% 5%;
