--- a/assets/css/catagories.css
+++ b/assets/css/catagories.css
@@ -1,3 +1,4 @@
+* {font-family: 'Mitr', 'Noto Sans KR', sans-serif;}
 .CategoriesMain {margin: 8vh 5vw;}
 .catagory{height:50px; width:"100%"; padding:0 !important;}
 .catagoryMenu {width:100%; height:100%; border: none; background-color: transparent;}
