--- a/assets/css/NavBar.css
+++ b/assets/css/NavBar.css
@@ -13,6 +13,7 @@ html, body {
   padding:0;
   margin:0;
   overflow: visible;
+  background-color: #DEE3E2;
 }
 
 #main{width:100%; overflow-x:hidden; transition: margin-left .5s;}
@@ -84,6 +85,10 @@ html, body {
 
 @media screen and (max-width:600px) {
   #Account{display: none;}
+}
+
+@media screen and (max-width:380px) {
+  #Logo{display: none;}
 }
 
 .SideNav {
