--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,6 +1,9 @@
 /* .login{
     margin-top: 50px;
 } */
+
+* {font-family: 'Mitr', 'Noto Sans KR', sans-serif;}
+
 hr{
     border: 0;
     border-top: 1px solid black;
