--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -4,7 +4,7 @@
     display: grid;
     column-gap: 2%;
     grid-template-columns: 50% 50%;
-    margin-top: 20vh;
+    margin: 20vh 0vh;
 }
 
 .pic-product{
@@ -18,8 +18,7 @@
 }
 
 #pic-record{ 
-    width:30vw;
-    height:55vh;
+    width:75%;
     margin-left: 15%;
 }
 
@@ -31,12 +30,12 @@
 #btn-p{
     position: absolute;
     top: 85%;
-    right: -25%;
+    right: 0%;
     transition: fill .5s;
 }
 
 #btn-p:hover ellipse{
-    fill: #858dff;
+    fill: #1999b0;
 }
 
 .addProduct-container{
@@ -45,7 +44,7 @@
 }
 
 .addProduct-container button{
-    background-color: rgb(89, 100, 242);
+    background-color: #116979;
     color: white;
     margin: 10px 0 0 0;
     min-width: 155px;
@@ -57,7 +56,7 @@
 }
 
 .addProduct-container button:hover{
-    background-color: #7884f7;
+    background-color: #1999b0;
 }
 
 @media only screen and (max-width: 600px){
