Update but not complete

--- a/assets/css/createAcc.css
+++ b/assets/css/createAcc.css
@@ -1,7 +1,7 @@
 * {font-family: 'Mitr', 'Noto Sans KR', sans-serif;}
 
 #main{
-    background-color: #edf2f1;
+    background-color: #DEE3E2;
 }
 
 hr{
