--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -136,7 +136,7 @@ div.product{
 .btnProduct-container button{
     position: relative;
     right: 0;
-    background-color: rgb(89, 100, 242);
+    background-color: #116979;
     color: white;
     margin: 10px 0 0 0;
     min-width: 155px;
@@ -150,7 +150,7 @@ div.product{
 }
 
 .btnProduct-container button:hover{
-    background-color: #7884f7;
+    background-color: #116979;
 
 }
 
