--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -32,6 +32,17 @@ hr{
     opacity: 0.7;
 }
 
+.but2{
+    background-color: #116979;
+    color: white;
+    border: 0;
+    transition: opacity 0.2s;
+}
+
+.but2:hover{
+    opacity: 0.7;
+}
+
 .create, .return{
     color: black;
     text-decoration: none;
