--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -54,6 +54,7 @@ div.product{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 0px 0px 40px 0px;
 }
 
 #p1{
@@ -77,7 +78,7 @@ div.product{
     cursor: pointer;
 }
 
-#num-p{
+.num-p{
     background-color: #f6f6f6;
     text-align: center;
     padding: 10px;
