--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -6,6 +6,10 @@
 
 #main{
     background-color: #DEE3E2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
 }
 
 hr{
