--- a/assets/css/catagories.css
+++ b/assets/css/catagories.css
@@ -1,8 +1,50 @@
-* {font-family: 'Mitr', 'Noto Sans KR', sans-serif;}
-.CategoriesMain {margin: 8vh 5vw;}
-.catagory{height:50px; width:"100%"; padding:0 !important;}
-.catagoryMenu {width:100%; height:100%; border: none; background-color: transparent;}
-#catagoryList {width:100%; padding:0 !important;}
-.btn-primary{
+* {
+        font-family: 'Mitr', 'Noto Sans KR', sans-serif;
+}
+
+.CategoriesMain {
+        margin: 8vh 5vw;
+}
+
+.catagory {
+        height: 50px;
+        width: "100%";
+        padding: 0 !important;
+}
+
+.catagoryMenu {
+        width: 100%;
+        height: 100%;
+        border: none;
+        background-color: transparent;
+        transition: background-color 0.2s;
+}
+.catagoryMenu:hover{
+        background-color: black;
+        color: white;
+}
+
+#catagoryList {
+        width: 100%;
+        padding: 0 !important;
+}
+
+.btn-primary {
         background-color: #5964f2 !important;
+}
+
+.btn {
+        transition: opacity 0.2s;
+}
+
+.btn:hover {
+        opacity: 0.7;
+}
+
+
+.card-img-top{
+  /* min-height: 171px; */
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+  border-radius: 5px !important;
 }
