--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -28,6 +28,7 @@
     width: 95vw;
     height: 23em;
     overflow-y: scroll;
+    overflow-x: hidden;
     scrollbar-width: thin;
 }
 
@@ -37,7 +38,7 @@
     grid-gap: 5%;
     justify-items: center;
     align-items: center;
-    padding: 3% 15% 5% 0%;
+    padding: 3% 15% 5% 0%
 
 }
 
@@ -54,7 +55,7 @@ div.product{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 0px 0px 40px 0px;
+    margin: 0px 0px 2px 0px;
 }
 
 #p1{
