--- a/assets/css/NavBar.css
+++ b/assets/css/NavBar.css
@@ -234,3 +234,19 @@ body {
 #SideMore:hover #SideMoreDrop {
   display: block;
 }
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
